--- a/content/ex1/ex1-ko.ipynb
+++ b/content/ex1/ex1-ko.ipynb
@@ -769,7 +769,7 @@
     "\n",
     "**출제자:** Marcel Pfaffhauser, Brahmani Thota, Junye Huang\n",
     "\n",
-    "**번역:** 신소영\n",
+    "**번역:** 신소영, Qiskit Slack @Sophy\n",
     "\n",
     "**버젼:** 1.0.0"
    ]
